kubernetes/03-services/amqp-metrics.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: amqp-metrics
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: amqp-metrics
    spec:
      containers:
      - name: prometheus
        image: kbudde/rabbitmq-exporter:v1.0.0-RC6.1
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 200m
            memory: 200Mi
      - name: prometheus-to-sd
        image: gcr.io/google-containers/prometheus-to-sd:v0.9.2
        command:
        - /monitor
        - --source=:http://localhost:9419
        - --stackdriver-prefix=custom.googleapis.com
        - --pod-id=$(POD_ID)
        - --namespace-id=$(POD_NAMESPACE)
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 200m
            memory: 200Mi
