kubernetes/03-services/django-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: backend
  ports:
    - name: web
      port: 8000
      targetPort: 8000
    - name: static
      port: 5050
      targetPort: 5050
