kubernetes/03-services/django-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-node-port
spec:
  type: NodePort
  selector:
    component: tsri
  ports:
    - name: web
      port: 8000
      targetPort: 8000
    - name: static
      port: 5050
      targetPort: 5050
