kubernetes/03-services/express-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: express-node-port
spec:
  type: NodePort
  selector:
    component: backend
  ports:
    - port: 3000
      targetPort: 3000
