kubernetes/03-services/frontend-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-node-port
spec:
  type: NodePort
  selector:
    component: web
  ports:
    - port: 3000
      targetPort: 3000
