kubernetes/03-services/rabbitmq-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: rabbitmq
  ports:
    - name: system
      port: 5672
      targetPort: 5672
    - name: dashboard
      port: 15672
      targetPort: 15672
