kubernetes/03-services/rabbitmq-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-node-port
  labels:
    component: rabbitmq
spec:
  type: NodePort
  ports:
  - port: 15672
    targetPort: 15672
  selector:
    component: rabbitmq
